# GNN_Hex

./: .gitignore  .gitmodules  MCTS.py  README.md  convert_graph.py  convert_graph_and_torch_script.md  dockerfile  env.yml  environment.yml  graph_tools_game.py  literature.md  more_questions.md  setup.py  some_thoughts.md  status.md  tests.py  todo.md  torch_cpu.yml
GN0/: GCN.py  MCPI.py  MCTS.py  MCTS_player.py  README.md  baseline_models.py  convert_graph.py  dockerfile  evaluate_elo.py  experiments.py  generate_training_data.py  geometric.py  graph_dataset.py  model_frontend.py  models.py  play_vs_model.py  replay_buffer.py  slice_poc.py  test_model.py  test_poc_models.py  torch_script_models.py  train_GCN.py  train_alpha_zero.py  unet_parts.py  util.py  visualize_MCTS.py  visualize_transitions.py
GN0/RainbowDQN/: README.md  elo_results  evaluate_elo.py  mohex_communicator.py  visualize_transitions.py
GN0/alpha_zero/: MCTS.py  MCTS_cached.py  MCTS_new.py  NN_interface.py  argp.py  elo.py  main.py  train_alpha_zero.py  visualize_MCTS.py  visualize_training_data.py
GN0/model/: GCN_model.pt  GraphSAGE_best.pt  GraphSAGE_hex_best.pt  GraphSAGE_unnormalized.pt
GN0/other/: MCTS_player.py
GN0/other/tensorflow_try/: GN0.py
GN0/supervised/: experiments.py  generate_training_data.py  graph_dataset.py  model_frontend.py  train_GCN.py
GN0/tensorflow_try/: convert_graph.py
GN0/tests/: test_cnn.py  test_convert_graph.py  test_generate_training_data.py  test_mcts.py  test_model.py  test_models_on_long_range_task.py  test_pos_from_graph.py  test_trained_model.py  test_utils.py
GN0/util/: README.md  convert_graph.py  explore_sgf_game.py  play_vs_model.py  plotting.py  test_model.py  torch_script.py  util.py  wandb_plotting.py
GNZero/: GN0.py  __init__.py  convert_graph.py  generate_training_data.py  util.py
GNZero/tensorflow_try/: models.py
GNZero/tests/: test_GN0.py
GnZero/: Gn.py  MCTS.py  convert_graph.py  models.py  util.py
PN_Search/: PN_Search.py  util.py
analyzer/: analyzer.py
cpp_graph_game/: CMakeLists.txt  boost_free_consistency.cpp  boost_free_node_switching_game.cpp  graph.cpp  hex_board_game.cpp  i_dont_need_boost.cpp  main  main.cpp  my_own_graph.cpp  node_switching_game  node_switching_game.cpp  shannon_node_switching_game  shannon_node_switching_game.cpp  speedtest  speedtest.cpp  test_dead_and_captured_consistency.cpp  test_env  test_env.cpp  test_my_graph  test_my_graph.cpp  test_torch_script.cpp  tests  tests.cpp  util.cpp
cpp_graph_game/CrazyAra/: constants.h  evalinfo.cpp  evalinfo.h  nn_api.cpp  node.cpp  node.h  searchthread.cpp  searchthread.h
cpp_graph_game/CrazyAra/agents/: agent.cpp  agent.h  mctsagent.cpp  mctsagent.h  randomagent.cpp  randomagent.h  rawnetagent.cpp  rawnetagent.h
cpp_graph_game/CrazyAra/agents/config/: searchlimits.cpp  searchlimits.h
cpp_graph_game/CrazyAra/agents/util/: gcthread.h
cpp_graph_game/CrazyAra/main/: convert_moves_to_training_data.cpp  convert_moves_to_training_data.h  crazyara.cpp  crazyara.h  customuci.cpp  customuci.h  main.cpp  options.cpp  options.h  playmode.cpp  playmode.h  timeoutreadythread.h
cpp_graph_game/CrazyAra/manager/: threadmanager.cpp  threadmanager.h  timemanager.cpp
cpp_graph_game/CrazyAra/rl/: gamepgn.h  inspect_rl_data.py  selfplay.cpp  selfplay.h  traindataexporter.cpp  traindataexporter.h
cpp_graph_game/CrazyAra/util/: blazeutil.h  speedcheck.cpp  speedcheck.h  statlogger.cpp  statlogger.h
cpp_graph_game/hex_graph_game/: CMakeLists.txt  graph.cpp  graph.h  hex_board_game.cpp  hex_board_game.h  main.cpp  main.h  nn_api.cpp  nn_api.h  shannon_node_switching_game.cpp  shannon_node_switching_game.h  shannon_restructured.cpp  shannon_restructured.h  util.cpp  util.h
cpp_graph_game/hex_graph_game/main/: main.cpp
cpp_graph_game/hex_graph_game/tests/: consistency_test.cpp  consistency_test.h  play_vs_model.cpp  play_vs_model.h  speedtest.cpp  speedtest.h  test_copy.cpp  test_copy.h  test_env.cpp  test_env.h  test_my_graph.cpp  test_torch_script.cpp  test_torch_script.h
cpp_graph_game/old_boost_stuff/: template_matching.cpp
cpp_graph_game/tests/: consistency_test.cpp  speedtest.cpp  test_my_graph.cpp
cpp_hex/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake
cpp_hex/CrazyAra/: README.md  evalinfo.cpp  nn_api.h  node.cpp  node.h
cpp_hex/hex_graph_game/: CMakeLists.txt  README.md  graph.h  hex_board_game.cpp  shannon_node_switching_game.cpp  shannon_node_switching_game.h  util.cpp
docker/: dockerfile  gt_dockerfile
game/: graph_tools_game.py  graph_tools_games.py  test_graph_game.py
graph_game/: README.md  __init__.py  abstract_board_game.py  abstract_graph_game.py  clique_node_switching_game.py  graph_board_game.py  graph_tools_game.py  graph_tools_games.py  graph_tools_hashing.py  hex_board_game.py  hex_gui.py  multi_env_manager.py  shannon_node_switching_game.py  test_graph_game.py  utils.py  winpattern_board.py  winpattern_game.py
markdown/: CrazyAraQuestions.md  after_thesis.md  another_one.md  back_on_track_hopefully.md  besides_coding.md  cnn20_vs_gnn20.md  cnn_transfer.md  doc_cpp.md  docker_ready.md  final_impl.md  fix_my_obvious_stupidity.md  how_i_made_gnns_work_with_torch_script_and_cuda.md  installation_instructions.md  lets_be_honest.md  logs_for_future_yannik.md  more_questions.md  not_going_great.md  oh_well.md  paper_notes.md  paperwrite.md  poc_done.md
rl_loop/: README.md  __main__.py  binaryio.py  dataset_loader.py  explain.py  fileio.py  generate_mohex_data.py  inspect_rl_data.py  main_config.py  metrics_pytorch.py  model_binary_player.py  old_models.py  play_vs_binary.py  plotting.py  rl_config.py  rl_training.py  rl_utils.py  run_model_on_training_data.py  trace_model.py  train_config.py  train_util.py  trainer_agent_pytorch.py  unittest_model.py  weight_from_model_file.py
rl_loop/torch/: best_q.pt  board_indices.pt  edge_indices.pt  game_start_ptr.pt  moves.pt  node_features.pt  plys.pt  policy.pt  value.pt
slides/: gnn_motivation.pptx
utils/: cleanup.py  general_utils.py  unite_pdfs.py
(+25 files in other folders)
