set(CMAKE_BUILD_TYPE Debug)
list(APPEND CMAKE_PREFIX_PATH "/usr/local/include/libtorch")
cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
project(test_torch_script)

option(WITH_CUDA "Enable CUDA support" ON)
# option(FOR_INFERENCE "" ON)
# add_definitions(-DFOR_INFERENCE)

find_package(Torch REQUIRED)
find_package(TorchScatter REQUIRED)
find_package(TorchSparse REQUIRED)

if (WITH_CUDA)
find_package(CUDAToolkit REQUIRED)
endif()

add_executable(main main.cpp)
target_compile_features(main PUBLIC cxx_range_for)
target_link_libraries(main TorchScatter::TorchScatter)
target_link_libraries(main TorchSparse::TorchSparse)
target_link_libraries(main "${TORCH_LIBRARIES}")
if (WITH_CUDA)
target_link_libraries(main CUDA::cusparse)
endif()
set_property(TARGET main PROPERTY CXX_STANDARD 17)
